syntax = "proto3";

package sonr.protocols.transmit;
import "proto/core/common/core.proto";
import "proto/core/common/data.proto";
option go_package = "github.com/sonr-io/core/x/core/transmit";

message Session {
  sonr.core.Direction direction = 1;
  sonr.core.Peer from = 2;
  sonr.core.Peer to = 3;
  sonr.core.Payload payload = 4;
  int64 lastUpdated = 5;
  repeated SessionItem items = 6;
  int32 currentIndex = 7;
  map<int32, bool> results = 8;
}

message SessionItem {
  int32 index = 1;
  int32 count = 2;
  sonr.core.FileItem item = 3;
  int64 written = 4;
  int64 size = 5;
  int64 totalSize = 6;
  sonr.core.Direction direction = 7;
  string path = 8;
}

message SessionPayload {
  sonr.core.Payload payload = 1;
  sonr.core.Direction direction = 2;
}
